templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kubia.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubia-svc
                port:
                  number: 80
